--- a/favoritos.html
+++ b/favoritos.html
@@ -6,9 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buscador Recetas Comida</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <style>
+        .signout{
+            background-color: skyblue;
+            color: white;
+            border-radius: 5%;border: none;
+            padding: 10px 26px;
+            text-align: center;
+            text-decoration: none;
+            margin: 4px 2px;
+            transition-duration: 0.4s;
+            cursor: pointer;
+        }
+        .signout:hover{
+            background-color: darkslateblue;
+            color: lightgray;
+        }
+    </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-warning bg-gradient p-3">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient p-3">
         <div class="container-fluid">
             <a class="navbar-brand fs-4" href="index.html"><strong><h1>Recipe Searcher</h1></strong>by Mattie Moriah Flores Rojas</a>
 
@@ -23,6 +40,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link fs-4 active" aria-current="page"  href="favoritos.html">My Favorites</a>
+                    </li>
+                    <li>
+                        <button id="logout" class="signout">Sign Out</button>
                     </li>
                 </ul>
             </div>
@@ -60,7 +80,7 @@
             <div class="toast-body"></div>
         </div>
     </div>
-
+    <script src="js/index.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/app.js"></script>
 </body>
