--- a/index.html
+++ b/index.html
@@ -6,10 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Recipes</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <style>
+        .signout{
+            background-color: skyblue;
+            color: white;
+            border-radius: 5%;border: none;
+            padding: 10px 26px;
+            text-align: center;
+            text-decoration: none;
+            margin: 4px 2px;
+            transition-duration: 0.4s;
+            cursor: pointer;
+        }
+        .signout:hover{
+            background-color: darkslateblue;
+            color: lightgray;
+        }
+    </style>
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-warning bg-gradient p-3">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient p-3">
         <div class="container-fluid">
             <a class="navbar-brand fs-4" href="index.html"><strong><h1>Recipe Searcher</h1></strong>by Mattie Moriah Flores Rojas</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,6 +39,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link fs-4" href="favoritos.html">My Favorites</a>
+                    </li>
+                    <li>
+                        <button id="logout" class="signout">Sign Out</button>
                     </li>
                 </ul>
             </div>
@@ -70,7 +90,7 @@
     </div>
 
   
-
+    <script src="js/index.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/app.js"></script>
 </body>
