--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
             <input type="email" placeholder="..." id="email" required>
             <label>Password</label>
             <input type="password" placeholder="..." id="password" required>
-            <input type="submit" value="Registro">
+            <input type="submit" value="Register">
         </form>
         <p>Already have an account? <a href="login.html">Log in</a></p>
     </section>
